# testlist

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  testlist-app.testlist.ron  testlist-spec.md
src/: error.rs  lib.rs  main.rs  schema.rs
src/actions/: files.rs  mod.rs  pty.rs
src/data/: definition.rs  effect.rs  mod.rs  results.rs  state.rs
src/queries/: checklist.rs  mod.rs  tests.rs
src/transforms/: mod.rs  navigation.rs  tests.rs  ui.rs
src/tui/: mod.rs  terminal.rs
src/ui/: app.rs  mod.rs
src/ui/panes/: mod.rs  notes.rs  terminal.rs  tests.rs
